crates/apollo-compiler/test_data/diagnostics/0063_extension_orphan.txt
Error: type extension for undefined type `A`
   ╭─[0063_extension_orphan.graphql:5:15]
   │
 5 │ extend scalar A @deprecated(reason: "Use B instead")
   │               ┬  
   │               ╰── extension here
───╯
Error: type extension for undefined type `B`
   ╭─[0063_extension_orphan.graphql:6:13]
   │
 6 │ extend type B { field: Int! }
   │             ┬  
   │             ╰── extension here
───╯
Error: schema extension without a schema definition
   ╭─[0063_extension_orphan.graphql:7:1]
   │
 7 │ ╭─▶ extend schema {
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── extension here
───╯
Error: type extension for undefined type `C`
    ╭─[0063_extension_orphan.graphql:10:14]
    │
 10 │ extend union C = String
    │              ┬  
    │              ╰── extension here
────╯
Error: type extension for undefined type `D`
    ╭─[0063_extension_orphan.graphql:11:18]
    │
 11 │ extend interface D {
    │                  ┬  
    │                  ╰── extension here
────╯
Error: type extension for undefined type `E`
    ╭─[0063_extension_orphan.graphql:14:14]
    │
 14 │ extend input E {
    │              ┬  
    │              ╰── extension here
────╯
Error: type extension for undefined type `F`
    ╭─[0063_extension_orphan.graphql:17:13]
    │
 17 │ extend enum F {
    │             ┬  
    │             ╰── extension here
────╯

